# portefeuil

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
compose_to_test/: docker-compose.yml
config/: default.yaml
migrations/: 20240809233525_create_courses_table.sql  20240810210643_users.sql
my-frontend/: Dockerfile  package-lock.json  package.json
my-frontend/pages/: _app.js  courses.js  index.js  register.js
my-frontend/styles/: globals.css
src/: config.rs  handlers.rs  main.rs  models.rs
src/db/: migrations.rs
src/middleware/: auth.rs
