[package]
name = "portefeuil"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1.39.2", features = ["full"] }
