[package]
name = "portefeuil"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
